Update navigation links to placeholder hrefs for Blog and Playground

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -64,7 +64,7 @@ const { currentPath = "/" } = Astro.props;
       </a>
     </li>
     <li>
-      <a href="/blog" title="Blog" class={currentPath === "/blog" ? "active" : ""}>
+      <a href="#" title="Blog" class={currentPath === "/blog" ? "active" : ""}>
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="24"
@@ -83,7 +83,7 @@ const { currentPath = "/" } = Astro.props;
       </a>
     </li>
     <li>
-      <a href="/playground" title="Playground" class={currentPath === "/playground" ? "active" : ""}>
+      <a href="#" title="Playground" class={currentPath === "/playground" ? "active" : ""}>
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="24"
